# bvclassificator

./: LICENSE  README.md
code/: Untitled.ipynb  easy_implementation.py  main.py  main1.py  main2.py  misc.py  prova.py  prova1.py  prova2.py  requirements.txt  scenarios.json
code/bvclassificator/: algorithm.py  algorithm_to_latex.py  concurrency.py  datacollector.py  runscenarios.py  simulate.py  simulation.py
code/bvclustering/: __init__.py  analysis-to-latex.py  analysis.py  simulation.py  voronoi_prova.py
code/json_output/: demo.json
funcanalysis/: main.py  pyproject.toml
funcanalysis/funcanalysis/: Structure.py  __init__.py  main.py  simCell.py  utils.py
output/S1/S1_params0/: 0.json  1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  (+60 more)
output/S1/S1_params1/: 0.json  1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  (+60 more)
output/S1_params0/: 0.json  1.json  10.json  11.json  12.json  13.json  14.json  15.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
(+300 files in other folders)
